Renamed from HILUCSI to HIFIR

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-name = hilucsi4py
+name = hifir4py
 version = 1.0.0
 author = NumGeom Group at Stony Brook University
-description = HILUCSI Python3 Interface
+description = HIFIR Python3 Interface
 long-description = file: README.rst
 license_file = LICENSE
 classifiers =
