--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ classifiers =
     Topic :: Software Development
     Operating System :: POSIX :: Linux
     Intended Audience :: Science/Research
-    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+    License :: OSI Approved :: GNU Affero General Public License v3 or later (GPLv3+)
 
 [options]
 setup_requires =
