--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = hifir4py
-version = 1.0.0
+version = 0.1.0
 author = NumGeom Group at Stony Brook University
 description = HIFIR Python3 Interface
 long-description = file: README.rst
@@ -10,12 +10,13 @@ classifiers =
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
     Programming Language :: C++
     Topic :: Scientific/Engineering
     Topic :: Software Development
-    Operating System :: POSIX :: Linux
+    Operating System :: POSIX
     Intended Audience :: Science/Research
-    License :: OSI Approved :: GNU Affero General Public License v3 or later (GPLv3+)
+    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
 
 [options]
 setup_requires =
@@ -23,7 +24,7 @@ setup_requires =
 install_requires =
     Cython
     numpy
-    scipy
+    scipy >= 1.5.1
 python_requires = >= 3.6
 include_package_data = True
 packages=find:
