--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,7 @@ include LICENSE
 include requirements.txt
 include MANIFEST.in
 include conf.py
-graft hilucsi4py
+graft hifir4py
 graft tests
 graft docs
 graft examples
@@ -11,3 +11,4 @@ global-exclude __pycache__
 global-exclude *.so
 global-exclude *.py[co]
 global-exclude *.cpp
+global-exclude *.pyx
