Updated system cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,15 +6,15 @@ description = HIFIR Python3 Interface
 long-description = file: README.rst
 license_file = LICENSE
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 5 - Production/Stable
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: C++
-    Topic :: Scientific/Engineering
-    Topic :: Software Development
+    Programming Language :: Cython
+    Topic :: Scientific/Engineering :: Mathematics
     Operating System :: POSIX
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
