--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,6 @@ graft docs
 graft examples
 global-exclude __pycache__
 global-exclude *.so
-global-exclude *.py[cox]
+global-exclude *.py[co]
 global-exclude *.cpp
-global-exclude *.pxi
+global-exclude *.h
